--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ netflix clone
                     <input  type="email" placeholder="Email address" required>
                 </div>
                 <div class="search-button">
-                    <button class="box" type="submit">Get Started</button>
+                    <button class="box" type="submit">Get Started  &gt;</button>
                 </div>
 
             </div>
@@ -128,7 +128,7 @@ netflix clone
             <input  type="email" placeholder="Email address" required>
         </div>
         <div class="search-button">
-            <button class="box" type="submit">Get Started</button>
+            <button class="box" type="submit">Get Started  &gt;</button>
         </div>
 
     </div>
